# my-fridge

./: .gitignore  LICENSE  README.md  api.py  english_recipes.py  kitchen.py  main_app.py  pyproject.toml  weekmenu.py  weekmenu_app.py
data/: categories.csv  categories.json  pantry.json  vegetarian_recipes.csv
notebooks/: create_datasets.ipynb
